#23 #20 improvements + new features